--- a/react-deployment.yaml
+++ b/react-deployment.yaml
@@ -20,7 +20,7 @@ spec:
         ports:
         - containerPort: 3000
         env:
-        - name: REACT_APP_BACKEND_URL
+        - name: BACKEND_URL
           value: backend-service
 
 
