--- a/backend.yaml
+++ b/backend.yaml
@@ -40,10 +40,31 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  labels:
+    app: backend
+    job: backend-service
 spec:
   selector:
     app: backend
   ports:
-    - protocol: TCP
+    - name: backend-port
+      protocol: TCP
       port: 5000
       targetPort: 5000
+
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: backend-service-monitor
+  labels:
+    release: prometheus
+spec:
+  jobLabel: job
+  selector:
+    matchLabels:
+      app: backend-service
+  endpoints:
+    - port: backend-port
+      interval: 30s
+      path: /swagger-stats/metrics
