--- a/mongo.yaml
+++ b/mongo.yaml
@@ -30,6 +30,7 @@ spec:
   selector:
     matchLabels:
       app: mongodb
+
   template:
     metadata:
       labels:
@@ -63,6 +64,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb-service
+  job: mongodb-service
 spec:
   selector:
     app: mongodb
@@ -71,3 +73,20 @@ spec:
       port: 27017
       targetPort: 27017
 
+
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: mongodb-service-monitor
+  labels:
+    release: prometheus
+spec:
+  jobLabel: job
+  selector:
+    matchLabels:
+      app: mongodb
+  endpoints:
+  - port: metrics
+    interval: 30s
+    
