--- a/backend.yaml
+++ b/backend.yaml
@@ -85,4 +85,25 @@ spec:
           annotations:
             summary: Few HTTP requests
             description: Fewer than 5 HTTP 
+
+---
+apiVersion: monitoring.coreos.com/v1alpha1
+kind: AlertmanagerConfig
+metadata:
+  name: alertmanager-config
+  labels:
+    release: prometheus
+spec:
+  global:
+    resolve_timeout: 5m
+  route:
+    group_by: ["severity"]
+    group_wait: 30s
+    group_interval: 5m
+    repeat_interval: 12h
+    receiver: 'webhook'
+  receivers:
+    - name: 'webhook'
+      webhook_configs:
+        - url: 'http://alertmanager-webhook-service:5000/alert'
       
