--- a/backend.yaml
+++ b/backend.yaml
@@ -77,14 +77,14 @@ spec:
   groups:
     - name: backend
       rules:
-        - alert: TFewRequestsAlert
-          expr: http_requests_total{job="backend-service"} < 1000000
-          for: 20s
+        - alert: InstanceDown
+          expr: up == 0
+          for: 5m
           labels:
             severity: critical
           annotations:
-            summary: Few HTTP requests
-            description: Fewer than 10000 HTTP 
+            summary: "Instance {{ $labels.instance }} down"
+            description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 5 minutes."
 
 ---
 apiVersion: monitoring.coreos.com/v1alpha1
