--- a/nestjs.yaml
+++ b/nestjs.yaml
@@ -18,5 +18,18 @@ spec:
         - name: nestjs
           image: mohammedaabouche/nestjs:1.0
           ports:
-            - containerPort: 3000
-        
+            - containerPort: 3001
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nestjs-service
+spec:
+  selector:
+    app: nestjs
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 3001
+  
+
