--- a/alertmanager.yaml
+++ b/alertmanager.yaml
@@ -71,7 +71,7 @@ data:
     receivers:
     - name: 'webhook-receiver'
       webhook_configs:
-      - url: nestjs-service/Metrics'  # URL du service backend-nest pour recevoir les alertes
+      - url: http/nestjs-service/Metrics'  # URL du service backend-nest pour recevoir les alertes
         send_resolved: true
 
     inhibit_rules:
