--- a/alertmanager.yaml
+++ b/alertmanager.yaml
@@ -102,7 +102,8 @@ spec:
       containers:
         - name: alertmanager
           image: prom/alertmanager
-         
+          args:
+            - '--config.file=/etc/config/alertmanager.yml'
           ports:
             - containerPort: 9093
 
