--- a/alertmanager.yaml
+++ b/alertmanager.yaml
@@ -42,7 +42,7 @@ metadata:
   name: alertmanager-config
   namespace: default
   labels:
-    ressource: prometheus
+    resource: prometheus
     release: prometheus
 spec:
   receivers:
@@ -56,3 +56,7 @@ spec:
     groupWait: 10s
     receiver: webhook
     repeatInterval: 30s
+    routes:
+      - matchers:
+          - alertname = "AlwaysFiring"
+        receiver: webhook
